# rust-oid-auth

./: Cargo.toml
src/: google_oidc.rs  main.rs  opts.rs
