[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
openidconnect = { version = "3.5.0", default-features = false, features = ["reqwest", "native-tls"] }
serde = "1.0"
env_logger = "0.11.3"
log = "0.4"
rand = "0.8"
serde_json = "1.0.97"
structopt="0.3"